# open-riff-box

./: .gitignore  CMakeLists.txt  README.md
docs/: ROADMAP.md  effects.md
presets/factory/: Acoustic.json  Blues.json  Classic Rock.json  Classical Mic.json  Clean.json  Init.json
src/: Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: AmpSimGold.cpp  AmpSimGold.h  AmpSimPlatinum.cpp  AmpSimPlatinum.h  AmpSimSilver.cpp  AmpSimSilver.h  AnalogDelay.cpp  AnalogDelay.h  Chorus.cpp  Chorus.h  DiodeDrive.cpp  DiodeDrive.h  Distortion.cpp  Distortion.h  EffectChain.cpp  EffectChain.h  EffectProcessor.h  Equalizer.cpp  Equalizer.h  Flanger.cpp  Flanger.h  MetalDistortion.cpp  MetalDistortion.h  NoiseGate.cpp  NoiseGate.h  PentodeStage.cpp  PentodeStage.h  Phaser.cpp  Phaser.h  PlateReverb.cpp  PlateReverb.h  SpringReverb.cpp  SpringReverb.h  TriodeStage.cpp  TriodeStage.h  TunerEngine.cpp  TunerEngine.h  Vibrato.cpp  Vibrato.h  WaveshaperEngine.cpp  (+1 more)
src/preset/: Preset.cpp  Preset.h  PresetManager.cpp  PresetManager.h
src/tools/: OfflineProcessor.cpp  OfflineProcessor.h
src/ui/: AmpSimGoldPanel.cpp  AmpSimGoldPanel.h  AmpSimPlatinumPanel.cpp  AmpSimPlatinumPanel.h  AmpSimSilverPanel.cpp  AmpSimSilverPanel.h  AmpSimSwitcherPanel.cpp  AmpSimSwitcherPanel.h  AudioSettingsPanel.h  BypassButtonLookAndFeel.h  ChainListPanel.cpp  ChainListPanel.h  ChorusPanel.cpp  ChorusPanel.h  DelayPanel.cpp  DelayPanel.h  DiodeDrivePanel.cpp  DiodeDrivePanel.h  DistortionPanel.cpp  DistortionPanel.h  EQPanel.cpp  EQPanel.h  EffectDetailPanel.cpp  EffectDetailPanel.h  EngineSelectorLookAndFeel.h  FlangerPanel.cpp  FlangerPanel.h  MainLayout.cpp  MainLayout.h  ModulationSwitcherPanel.cpp  ModulationSwitcherPanel.h  NoiseGatePanel.cpp  NoiseGatePanel.h  PhaserPanel.cpp  PhaserPanel.h  PlaceholderPanel.h  PlateReverbPanel.cpp  PlateReverbPanel.h  PresetBar.cpp  PresetBar.h  (+19 more)
